--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>Hello</h1>
-    <script src="array.js"></script>
+    <script src="constructor.js"></script>
   </body>
 </html>
