--- a/Dom/index.html
+++ b/Dom/index.html
@@ -8,23 +8,28 @@
   <body>
     <div class="container">
       <div class="m-3">
+        <!--<h1 id="header" class="btn-success btn">DOM</h1>-->
         <h1 id="header">DOM</h1>
+        <button class="btn btn-primary mb-4">Click</button>
         <div class="content">
           <p>My first paragraph!</p>
           <ul>
             <!-- <li>Javascript <span style="display: none;">new</span></li>
             -->
-            <li>Javascript</li>
+            <li>Javascript<span style="display: none">success</span></li>
             <li>Python</li>
-            <li>Rust</li>
+            <li>Rust<span style="display: none">danger</span></li>
           </ul>
+          <p>My second paragraph!</p>
         </div>
         <div class="content">
           <p>
           Burgdoggen spare ribs rump flank, pork chicken boudin kevin
           frankdfurter pork belly cupim. Corned beef turducken tongue
           alcatra doner jowl ground round. Salami swine tail turducken
-          pancetta t-bone tenderloin <a href="http://google.com">short</a> loin pork chop ribeye filet mignon
+          pancetta t-bone tenderloin <a href="http://google.com">
+            short
+          </a> loin pork chop ribeye filet mignon
           corned beef.
           </p>
           <p>
@@ -42,6 +47,6 @@
         </div>
       </div>
     </div>
-    <script src="domExam3.js"></script>
+    <script src="domExam5.js"></script>
   </body>
 </html>
