--- a/mini_project2/index.html
+++ b/mini_project2/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Accordion | Modern JS!</title>
+    <title>Accordion | JS !</title>
     <meta cahrset="utf-8">
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
@@ -24,7 +24,7 @@
         </div>
         <div class="content">
           <div class="accordion">
-            <div> <!-- wrapper -->
+            <div class="show"> <!-- wrapper -->
               <span>My first Accordion Element</span>
               <div>
                 Burgdoggen spare ribs rump flank, pork chicken boudin kevin
@@ -36,7 +36,7 @@
                 corned beef.
               </div>
             </div>
-            <div class="show"> <!-- wrapper -->
+            <div> <!-- wrapper -->
               <span>My second Accordion Element</span>
               <div>
                 Swine tenderloin buffalo bresaola bacon capicola fatback strip 
@@ -54,8 +54,33 @@
                 porchetta beef ribs.
               </div>
             </div>
+            <div> <!-- wrapper -->
+              <span>My 4th Accordion Element</span>
+              <div>
+                Beef pancetta buffalo, chicken capicola pastrami ground round
+                rump meatball chislic. Ham jerky shoulder, swine flank corned beef
+                chuck hamburger ham hock rump buffalo. Meatball meatloaf swine
+                porchetta beef ribs.
+              </div>
+            </div>
+            <div> <!-- wrapper -->
+              <span>My 5th Accordion Element</span>
+              <div>
+                Beef pancetta buffalo, chicken capicola pastrami ground round
+                rump meatball chislic. Ham jerky shoulder, swine flank corned beef
+                chuck hamburger ham hock rump buffalo. Meatball meatloaf swine
+                porchetta beef ribs.
+              </div>
+            </div>
           </div>
         </div>
+        <p class="mt-3">
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+          sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+          sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+          Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et 
+        </p>
       </div>
     </div>
     <script src="accordion.js"></script>
